# ml_kursus

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
experiments/configs/: chatgpt_config.yaml  config_defaults.yaml  final_config.yaml  grid_sweep.yaml  random_sweep.yaml  random_tuning_sweep.yaml
notebooks/: Day 1 - Part 1 - PyTorch.ipynb  Day 1 - Part 2 - PyTorch Lightning.ipynb  Day 2 - Part 1 - Feature Engineering & Selection.ipynb  Day 2 - Part 2 - Feature Selection for 24h Forecast.ipynb  Day 2 - Part 3 - 24hour Forecasts.ipynb  Day 2 - Part 4 - Neural Network Modularity.ipynb  Day 2 - Part 5a - LSTM.ipynb  Day 2 - Part 5b - GRU.ipynb  Day 3 - Part 1 - Other Machine Learning Models.ipynb  Day 3 - Part 2 - Model Tuning with WandB.ipynb
src/: feature_engineering.py  inference.py  model_training.py  models.py  optim_num_workers.py  prepare_data.py  torch_loop.py
tests/: test_feature_engineering.py  test_pipeline.py  test_prepare_data.py
training/: early_stopping.py  extreme_gradient_boost.py  hyperparameter_sweep.py  model_loading.py  model_serialization.py  multi_random_forest.py  random_forest.py  support_vector.py  train_final_model.py
tuning/: random_sweep.py
