[tool.poetry]
name = "lighthouse-course"
version = "0.1.0"
description = "Code and Notebooks for the Lighthouse Project course on Machine Learning for Demand Forecast."
authors = ["nva <nva@mmmi.sdu.dk>"]
license = "European Union Public Licence v. 1.2"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
holidays = "^0.21.13"
xgboost = "^1.7.4"
suncalc = "^0.1.2"
seaborn = "^0.12.2"
torch = "^1.13.1"
pytorch-lightning = "^1.9.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
